uptime/uptime.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: uptime-kuma-data
              mountPath: /app/data
            - name: uptime-kuma-cert
              mountPath: /certs
      volumes:
        - name: uptime-kuma-data
          persistentVolumeClaim:
            claimName: uptime-kuma-data-pvc
        - name: uptime-kuma-cert
          persistentVolumeClaim:
            claimName: uptime-kuma-cert-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: uptime
spec:
  selector:
    app: uptime-kuma
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
